--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Gilroy";
-  src: url("..fonts/gilroyextrabold.woff") format(woff);
-  src: url("..fonts/gilroyextrabold.woff2") format(woff2);
+  src: url("../fonts/gilroyextrabold.woff") format(woff);
+  src: url("../fonts/gilroyextrabold.woff2") format(woff2);
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Gilroy";
-  src: url("..fonts/gilroylight.woff") format(woff);
-  src: url("..fonts/gilroylight.woff2") format(woff2);
+  src: url("../fonts/gilroylight.woff") format(woff);
+  src: url("../fonts/gilroylight.woff2") format(woff2);
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("..fonts/opensans.woff") format(woff);
-  src: url("..fonts/opensans.woff2") format(woff2);
+  src: url("../fonts/opensans.woff") format(woff);
+  src: url("../fonts/opensans.woff2") format(woff2);
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("..fonts/opensanslight.woff") format(woff);
-  src: url("..fonts/opensanslight.woff2") format(woff2);
+  src: url("../fonts/opensanslight.woff") format(woff);
+  src: url("../fonts/opensanslight.woff2") format(woff2);
   font-weight: 300;
   font-style: normal;
 }
@@ -51,12 +51,12 @@ a {
   background-color: #f7e296;
 }
 
-.main-header-logo svg:hover,
-.main-header-logo svg:focus {
+.main-header-logo[href]:hover,
+.main-header-logo[href]:focus {
   fill-opacity: 0.6;
 }
 
-.main-header-logo svg:active {
+.main-header-logo[href]:active {
   fill-opacity: 0.3;
 }
 
@@ -119,7 +119,7 @@ a {
 }
 
 .main-nav {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 18px;
   line-height: 24px;
   color: #000000;
@@ -133,7 +133,7 @@ a {
 
 .sub-menu {
   list-style: none;
-  font-family: "Open Sans";
+  font-family: "Open Sans" , Arial, sans-serif;
   font-weight: 300;
   font-size: 15px;
   line-height: 36px;
@@ -170,7 +170,7 @@ a {
 
 .about h2,
 .contacts h2 {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 47px;
   line-height: 48px;
   font-weight: 800;
@@ -179,7 +179,7 @@ a {
 
 .delivery-list {
   list-style-type: circle;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-weight: 800;
   font-size: 16px;
   line-height: 40px;
@@ -187,7 +187,7 @@ a {
 }
 
 .button {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
@@ -197,7 +197,11 @@ a {
   color: #000000;
   border: none;
   letter-spacing: 5px;
-  background-image: linear-gradient(#fff 30%, #f0c52e 30%, #f0c52e 70%, #fff 60%);
+  background-image: linear-gradient(transparent 30%, #f0c52e 30%, #f0c52e 70%, transparent 60%);
+}
+
+button[type="submit"] {
+  background-color: transparent;
 }
 
 .button:hover, 
@@ -211,7 +215,7 @@ a {
 }
 
 .page-title {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 47px;
   font-weight: 800;
   line-height: 48px;
@@ -243,7 +247,7 @@ a {
 
 .filters h2 {
   background-color: #dcdcdc;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 16px;
   font-weight: 800;
   line-height: 24px;
@@ -256,7 +260,7 @@ a {
 }
 
 .filter legend {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 16px;
   font-weight: 800;
   line-height: 24px;
@@ -279,13 +283,43 @@ a {
 
 .catalog-list {
   list-style: none;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   line-height: 24px; 
 }
 
 .catalog-list h3 {
   font-size: 16px;
   font-weight: 800; 
+}
+
+.catalog-item-image {
+  position: relative;
+}
+
+.catalog-item-hover {
+  position: absolute;
+  display: none;;
+  width: 360px;
+  height: 380px;
+  text-align: center;
+  background-color: rgba(220, 220, 220, 0.7);
+}
+
+.catalog-item-hover .compare-button {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.catalog-item-hover .compare-button:hover {
+  color: rgba(0, 0, 0);
+}
+
+.catalog-item-hover .compare-button:active {
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.catalog-item-image:hover .catalog-item-hover {
+  display: block;
+  cursor: pointer;
 }
 
 .catalog-item-price {
@@ -303,16 +337,16 @@ a {
   background-color: #464646;
 }
 
-.footer-logo svg {
+.footer-logo {
   fill: #ffc600;
 }
 
-.footer-logo svg:hover,
-.footer-logo svg:focus {
+.footer-logo[href]:hover,
+.footer-logo[href]:focus {
   fill-opacity: 0.6;
 }
 
-.footer-logo svg:active {
+.footer-logo[href]:active {
   fill-opacity: 0.3;
 }
 
@@ -348,7 +382,7 @@ a {
 
 .footer-nav {
   list-style: none;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
@@ -391,7 +425,7 @@ a {
 .modal {
   color: #000000;
   background-color: #fff;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 18px;
   line-height: 24px;
   font-weight: 800;
@@ -399,7 +433,7 @@ a {
 
 .writeus input,
 .writeus textarea {
-  font-family: "Open Sans";
+  font-family: "Open Sans" , Arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
