--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ a {
   position: relative;
   padding: 0 60px;
   padding-top: 50px;
+  padding-bottom: 150px;
 }
 
 .header-middle-wrapper {
@@ -209,7 +210,10 @@ a {
 }
 
 .slider {
-  display: none;
+  /* display: none; */
+  background-color: lightgreen;
+  /* position: absolute;
+  top: -179px; */
 }
 
 .slider dl {
@@ -233,15 +237,41 @@ a {
 }
 
 .slide-item {
-  background-image: linear-gradient(#f7e296 20%, #fff 20%);
+  /* background-image: linear-gradient(#f7e296 20%, #fff 20%); */
 }
 
 .slide-number {
+  margin: 0;
+  padding: 0;
   font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 179.2px;
   line-height: 179.2px;
   font-weight: 800;
   color: #fff; 
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  top: 55px;
+}
+
+.slide-content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 90px;
+  padding-right: 80px;
+  width: 990px;
+  position: relative;
+  top: -106px;
+}
+
+.slide-item-1 .slider-img {
+  width: 348px;
+  height: 486px;
+}
+
+.slide-description-wrapper {
+  width: 480px;
+  padding-top: 75px;
 }
 
 .slider th{
@@ -259,13 +289,19 @@ a {
 }
 
 .categories {
-  display: none;
+  /* display: none; */
+  margin-bottom: 80px;
 }
 
 .categories-list {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .categories-list h3 {
@@ -274,10 +310,28 @@ a {
   font-size: 18px;
   line-height: 24px;
   color: #000000;
+  margin: 0;
+  padding: 0;
+}
+
+.categories-list p {
+  margin: 0;
+  padding: 0;
+}
+
+.category {
+  width: 160px;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .category a{
   background-color: rgba(240, 197, 46, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 160px;
+  height: 160px;
 }
 
 .category a:hover,
@@ -290,7 +344,26 @@ a {
 }
 
 .services {
-  display: none;
+  /* display: none; */
+  width: 1200px;
+  background-image: linear-gradient(#ffffff 100px, #e5e5e5 100px);
+}
+
+.services-slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* min-height: 387px; */
+  padding-bottom: 70px;
+  /* background-image: linear-gradient(#ffffff 100px, #e5e5e5 100px); */
+}
+
+.services-slider-buttons {
+  width: 273px;
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  border-right: 7px solid black;
 }
 
 .services-slider .button {
@@ -304,8 +377,11 @@ a {
 }
 
 .services-slide {
-  background-image: linear-gradient(#ffffff 20%, #e5e5e5 20%);
-
+  /* background-image: linear-gradient(#ffffff 20%, #e5e5e5 20%); */
+  padding-top: 75px;
+  display: flex;
+  justify-content: space-around;
+  width: 760px;
 }
 
 .services-slide h3 {
@@ -314,16 +390,25 @@ a {
   font-size: 47px;
   line-height: 48px;
   color: #000000;
+  margin: 0;
+  padding: 0;
+}
+
+.services-slide-description-wrapper {
+  width: 460px;
 }
 
 .brands {
-  display: none;
+  /* display: none; */
 }
 
 .brand-list {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .brand-list a {
@@ -440,6 +525,8 @@ button[type="submit"] {
   line-height: 24px;
   letter-spacing: 4px;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 
 .filter fieldset {
@@ -470,7 +557,11 @@ button[type="submit"] {
 }
 
 .sort {
-  display: none;
+  /* display: none; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.08);
 }
 
 .sort h3 {
@@ -481,12 +572,21 @@ button[type="submit"] {
   letter-spacing: 4px;
   color: #000000;
   text-transform: uppercase; 
+  margin: 0;
+  padding: 0;
+  padding-right: 50px;
 }
 
 .sort ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.sort ul:last-child {
+  margin-left: auto;
 }
 
 .sort a {
@@ -564,13 +664,17 @@ button[type="submit"] {
 }
 
 .pagination {
-  display: none;
+  /* display: none; */
+  width: 760px;
   background-color: #ebebeb;
   font-family: "Gilroy", "Arial Black", sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 800;
-  color: #000000; 
+  color: #000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .pagination-btn {
@@ -596,6 +700,13 @@ button[type="submit"] {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.pagination-item {
+  padding-right: 30px;
 }
 
 .pagination-item a{
@@ -798,4 +909,15 @@ button[type="submit"] {
 .writeus input:invalid {
   background-color: #f6dada;
   border: none;
+}
+
+/* submenu position */
+
+.sub-menu {
+  display: none;
+  position: absolute;
+}
+
+.site-nav li:first-child:hover .sub-menu {
+  display: flex;
 }
