--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,6 @@ a {
 }
 
 .user-nav .cart-button {
-  /* margin-left: 40px; */
   padding-left: 25px;
   position: relative;
 }
@@ -269,7 +268,6 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  /* margin-left: 100px; */
   margin-bottom: 28px;
   width: 100%;
 }
@@ -365,7 +363,6 @@ a {
   line-height: 24px;
   color: #000000;
   font-weight: 800;
-  /* margin-top: 30px; */
 }
 
 .site-nav {
@@ -550,7 +547,6 @@ a {
   padding: 0;
   width: 480px;
   letter-spacing: 0.1px;
-  /* margin-bottom: 45px; */
 }
 
 .slide-number {
@@ -895,7 +891,6 @@ a {
 }
 
 .brands {
-  /* margin-top: 90px; */
   margin-bottom: 90px;
 }
 
@@ -956,7 +951,6 @@ a {
 }
 
 .about .button {
-  /* margin-top: 55px; */
   vertical-align: middle;
   display: inline-block;
   padding-left: 24px;
@@ -970,17 +964,7 @@ a {
   position: relative;
 }
 
-/* .contacts::before {
-  content: "";
-  width: 80px;
-  position: absolute;
-  top: -55px;
-  left: 0;
-  border-top: 7px solid #000000;
-} */
-
 .contacts .button {
-  /* margin-top: 65px; */
   display: inline-block;
   vertical-align: middle;
   padding-left: 40px;
@@ -1115,7 +1099,6 @@ button[type="submit"] {
           justify-content: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  /* margin-bottom: 43px; */
   padding-left: 60px;
   font-size: 14px;
   line-height: 24px;
@@ -1125,8 +1108,6 @@ button[type="submit"] {
 .breadcrumbs li {
   margin-right: 20px;
   padding-right: 19px;
-  /* display: flex;
-  justify-content: flex-start; */
   position: relative;
 }
 
@@ -1276,7 +1257,6 @@ button[type="submit"] {
 .filter-input-checkbox:hover + label::before,
 .filter-input-checkbox:focus + label::before {
   opacity: 0.6;
-  /* outline: blue solid 2px; */
 }
 
 .filter-input:disabled + label {
@@ -1697,7 +1677,6 @@ button[type="submit"] {
 
 .pagination-btn {
   margin: 0;
-  /* padding: 24px 30px 23px 30px; */
   font: inherit;
   text-transform: uppercase;
   letter-spacing: 3.7px;
@@ -1786,7 +1765,6 @@ button[type="submit"] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* justify-content: space-between; */
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1880,8 +1858,6 @@ button[type="submit"] {
       -ms-flex-align: end;
           align-items: flex-end;
   width: 420px;
-  /* margin-left: 160px;
-  margin-right: auto; */
 }
 
 .footer-bottom {
@@ -2044,13 +2020,49 @@ button[type="submit"] {
   fill-opacity: 0.3;
 }
 
-@keyframes move {
+@-webkit-keyframes move {
   0% {
-    transform: translateX(-2000px);
+    -webkit-transform: translateX(-2000px);
+            transform: translateX(-2000px);
   }
 
   100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes move {
+  0% {
+    -webkit-transform: translateX(-2000px);
+            transform: translateX(-2000px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes blink {
+  0% {
+    background-color: #f6dada;
+    border: 3px solid #f6dada;
+  }
+
+  100% {
+    background-color: #f2f2f2;
+    border: 3px solid #f2f2f2;
+  }
+}
+
+@keyframes blink {
+  0% {
+    background-color: #f6dada;
+  }
+
+  100% {
+    background-color: #f2f2f2;
   }
 }
 
@@ -2204,14 +2216,9 @@ button[type="submit"] {
   background-color: #fff;
 }
 
-.writeus input:invalid {
-  background-color: #f6dada;
-  border: none;
-}
-
 .writeus .input-invalid {
-  background-color: #f6dada;
-  border: none;
+  -webkit-animation: blink 1s;
+          animation: blink 1s;
 }
 
 .modal-map {
@@ -2246,5 +2253,6 @@ button[type="submit"] {
 
 .modal-show {
   display: block;
-  animation: move 0.5s;
+  -webkit-animation: move 0.5s;
+          animation: move 0.5s;
 }
