--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,11 @@ a {
   margin-bottom: 35px;
 }
 
+.category-link .category-2 {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
 .category-link:hover,
 .category-link:focus {
   background-color:  rgb(240, 197, 46);
