--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,34 @@
 @font-face {
-  font-family: "Gilroy";
-  src: url("../fonts/gilroyextrabold.woff") format(woff);
-  src: url("../fonts/gilroyextrabold.woff2") format(woff2);
+  font-family: 'Gilroy';
+  src: url("../fonts/gilroyextrabold.woff") format("woff"),
+       url("../fonts/gilroyextrabold.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Gilroy";
-  src: url("../fonts/gilroylight.woff") format(woff);
-  src: url("../fonts/gilroylight.woff2") format(woff2);
+  src: local("Gilroy"),
+       url("../fonts/gilroylight.woff") format("woff"),
+       url("../fonts/gilroylight.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("../fonts/opensans.woff") format(woff);
-  src: url("../fonts/opensans.woff2") format(woff2);
+  src: local("Open Sans"),
+       url("../fonts/opensans.woff") format("woff"),
+       url("../fonts/opensans.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("../fonts/opensanslight.woff") format(woff);
-  src: url("../fonts/opensanslight.woff2") format(woff2);
+  src: local("Open Sans"),
+       url("../fonts/opensanslight.woff") format("woff"),
+       url("../fonts/opensanslight.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
@@ -415,24 +418,24 @@ a {
 }
 
 .sub-menu {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-family: "Open Sans" , Arial, sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 36px;
-    text-transform: none;
-    letter-spacing: normal;
-    display: none;
-    position: absolute;
-    left: -60px;
-    padding-left: 60px;
-    padding-top: 30px;
-    padding-bottom: 24px;
-    background-color: #f7e296;
-    width: 1100px;
-    z-index: 2;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: "Open Sans" , Arial, sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 36px;
+  text-transform: none;
+  letter-spacing: normal;
+  display: none;
+  position: absolute;
+  left: -60px;
+  padding-left: 60px;
+  padding-top: 30px;
+  padding-bottom: 24px;
+  background-color: #f7e296;
+  width: 1100px;
+  z-index: 2;
 }
 
 .sub-menu ul {
@@ -466,7 +469,6 @@ a {
 .slider {
   display: block;
   position: relative;
-  margin-bottom: 107px;
 }
 
 .slider .button {
@@ -484,7 +486,7 @@ a {
 
 .slider-controls {
   position: absolute;
-  bottom: 127px;
+  bottom: 234px;
   right: 84px;
   font-size: 0;
   z-index: 3;
@@ -509,6 +511,18 @@ a {
 
 .slide {
   display: none;
+}
+
+.slide-1 {
+  padding-bottom: 98px;
+}
+
+.slide-2 {
+  padding-bottom: 85px;
+}
+
+.slide-3 {
+  padding-bottom: 107px;
 }
 
 #special-1:checked ~ .slider-list #slide-1,
@@ -577,13 +591,15 @@ a {
 
 .slide-img-wrapper {
   width: 560px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  text-align: center;
 }
 
-.slide-img-wrapper img {
-  margin: auto;
+.slide-2 .slider-img {
+  margin: 14px 0 0 17px;
+}
+
+.slide-3 .slider-img {
+  margin: 67px 0 0 30px;
 }
 
 .slide-description-wrapper {
@@ -702,7 +718,7 @@ a {
   margin-bottom: 20px;
 }
 
-.category-link{
+.category-img-wrapper {
   background-color: rgba(240, 197, 46, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -723,13 +739,13 @@ a {
       align-self: flex-end;
 }
 
-.category-link:hover,
-.category-link:focus {
+.category-link:hover .category-img-wrapper,
+.category-link:focus .category-img-wrapper {
   background-color:  rgb(240, 197, 46);
 }
 
 .category-link:active .category-img,
-.category-link:active + .category-title{
+.category-link:active .category-title{
   opacity: 0.3;
 }
 
@@ -835,48 +851,44 @@ a {
   display: block;
 }
 
-.services-slide-wrapper {
+.services-slider-item {
   padding-top: 74px;
-  width: 760px;
-}
-
-.services-slide-description {
-  width: 430px;
+  width: 460px;
   position: relative;
-  padding-right: 250px;
+  padding-right: 300px;
 }
 
-.services-slide-1 .services-slide-description::after {
+.services-slide-1::after {
   content: "";
   width: 136px;
   height: 164px;
   position: absolute;
   background-image: url("../img/delivery.svg");
-  top: 10px;
-  right: -13px;
+  top: 85px;
+  right: 66px;
 }
 
-.services-slide-2 .services-slide-description::after {
+.services-slide-2::after {
   content: "";
   width: 171px;
   height: 194px;
   position: absolute;
   background-image: url("../img/warranty.svg");
-  top: 0;
-  right: 0;
+  top: 60px;
+  right: 46px;
 }
 
-.services-slide-3 .services-slide-description::after {
+.services-slide-3::after {
   content: "";
   width: 156px;
   height: 186px;
   position: absolute;
   background-image: url("../img/credit.svg");
-  top: 0;
-  right: 0;
+  top: 60px;
+  right: 70px;
 }
 
-.services-slide-description h3 {
+.services-slider-item h3 {
   font-family: "Gilroy", "Arial Black", sans-serif;
   font-weight: 800;
   font-size: 47px;
@@ -888,8 +900,7 @@ a {
   margin-bottom: 30px;
 }
 
-
-.services-slide-description p {
+.services-slider-item p {
   margin: 0;
   padding: 0;
   letter-spacing: 0.2px;
@@ -1008,7 +1019,7 @@ a {
   letter-spacing: 0.1px;
 }
 
-.about-description p {
+.about-description {
   margin: 0;
   padding: 0;
   padding-bottom: 30px;
@@ -1069,16 +1080,37 @@ button[type="submit"] {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.inner-page {
-  overflow-x: hidden;
-}
-
 .inner-page .main-header {
   margin-bottom: 35px;
 }
 
+.inner-page .columns-wrapper-background {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .inner-page .columns-wrapper {
   margin: 0;
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.08) 70px, transparent 70px);
+  background-image: -o-linear-gradient(rgba(0,0,0,0.08) 70px, transparent 70px);
+  background-image: linear-gradient(rgba(0,0,0,0.08) 70px, transparent 70px);
+  padding: 0;
+}
+
+.inner-page .columns-wrapper-background::before,
+.inner-page .columns-wrapper-background::after {
+  content: "";
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+          flex: 1 0 0;
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.08) 70px, transparent 70px);
+  background-image: -o-linear-gradient(rgba(0,0,0,0.08) 70px, transparent 70px);
+  background-image: linear-gradient(rgba(0,0,0,0.08) 70px, transparent 70px);
+}
+
+.inner-page .columns-wrapper-background::before {
+  background-color: #efefef;
 }
 
 .page-title {
@@ -1108,6 +1140,7 @@ button[type="submit"] {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.1px;
+  margin-bottom: 46px;
 }
 
 .breadcrumbs li {
@@ -1145,20 +1178,14 @@ button[type="submit"] {
 
 .filters {
   background-color: #efefef;
+  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.08) 70px, transparent 70px);
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.08) 70px, transparent 70px);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.08) 70px, transparent 70px);
   color: #000000;
   width: 270px;
   padding-left: 60px;
+  margin-right: 70px;
   position: relative;
-}
-
-.filters::before {
-  content: "";
-  position: absolute;
-  width: 9999px;
-  right: 100%;
-  top: 0;
-  bottom: 0;
-  background-color: #efefef;
 }
 
 .filters h2 {
@@ -1174,15 +1201,6 @@ button[type="submit"] {
   padding-bottom: 23px;
   position: relative;
   margin-bottom: 70px;
-}
-
-.filters h2::before {
-  content: "";
-  position: absolute;
-  width: 9999px;
-  right: 100%;
-  top: 0;
-  bottom: 0;
 }
 
 .filter fieldset {
@@ -1292,6 +1310,11 @@ button[type="submit"] {
   top: 7px;
 }
 
+.filter-input-radio:hover + label::before,
+.filter-input-radio:focus + label::before {
+  opacity: 0.6;
+}
+
 .filter-input-radio:disabled + label::before {
   opacity: 0.25;
 }
@@ -1320,6 +1343,8 @@ button[type="submit"] {
 
 .toggle {
   position: absolute;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   top: 6px;
   left: 0;
   width: 4px;
@@ -1330,6 +1355,11 @@ button[type="submit"] {
   border-radius: 50%;
   -webkit-box-shadow: 0 2px 1px #cfcfcf;
           box-shadow: 0 2px 1px #cfcfcf;
+  cursor: pointer;
+}
+
+.toggle:active {
+  border: 9px solid #ffffff;
 }
 
 .toggle-min {
@@ -1392,29 +1422,10 @@ button[type="submit"] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: rgba(0, 0, 0, 0.08);
   padding-top: 23px;
   padding-bottom: 23px;
   margin-bottom: 60px;
   position: relative;
-}
-
-.sort::before,
-.sort::after {
-  content: "";
-  position: absolute;
-  width: 9999px;
-  top: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.08);
-}
-
-.sort:before {
-  right: 100%;
-}
-
-.sort::after {
-  left: 100%;
 }
 
 .sort h3 {
