--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,37 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url("../fonts/gilroyextrabold.woff") format("woff"),
-       url("../fonts/gilroyextrabold.woff2") format("woff2");
-  font-weight: 800;
   font-style: normal;
+  font-weight: 800;
+  src: local("Gilroy"),
+       url("../fonts/gilroyextrabold.woff2") format("woff2"),
+       url("../fonts/gilroyextrabold.woff") format("woff");
 }
 
 @font-face {
   font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 300;
   src: local("Gilroy"),
-       url("../fonts/gilroylight.woff") format("woff"),
-       url("../fonts/gilroylight.woff2") format("woff2");
-  font-weight: 300;
-  font-style: normal;
+       url("../fonts/gilroylight.woff2") format("woff2"),
+       url("../fonts/gilroylight.woff") format("woff");
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: local("Open Sans"),
-       url("../fonts/opensans.woff") format("woff"),
-       url("../fonts/opensans.woff2") format("woff2");
+  font-style: normal;
   font-weight: 400;
-  font-style: normal;
+  src: local("Open Sans"),
+       url("../fonts/opensans.woff2") format("woff2"),
+       url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: local("Open Sans"),
-       url("../fonts/opensanslight.woff") format("woff"),
-       url("../fonts/opensanslight.woff2") format("woff2");
-  font-weight: 300;
   font-style: normal;
+  font-weight: 300;
+  src: local("Open Sans"),
+       url("../fonts/opensanslight.woff2") format("woff2"),
+       url("../fonts/opensanslight.woff") format("woff");
 }
 
 body {
@@ -1001,33 +1002,26 @@ a {
   margin-bottom: 42px;
 }
 
-.contacts-description p{
-  margin: 0;
+.contacts-description {
+  margin: 0 0 40px 0;
   padding: 0;
-  margin-bottom: 40px;
-  letter-spacing: 0.1px;
-}
-
-.about-delivery {
-  margin-bottom: 50px;
-}
-
-.about-delivery p {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 68px;
   letter-spacing: 0.1px;
 }
 
 .about-description {
   margin: 0;
+  padding: 0 0 30px 0;
+  letter-spacing: 0.1px;
+}
+
+.about-delivery {
+  margin: 0 0 68px 0;
   padding: 0;
-  padding-bottom: 30px;
   letter-spacing: 0.1px;
 }
 
 .delivery-list {
-  margin: 0;
+  margin: 0 0 50px 0;
   padding: 0;
   padding-left: 20px;
   list-style-type: circle;
@@ -1359,7 +1353,9 @@ button[type="submit"] {
 }
 
 .toggle:active {
-  border: 9px solid #ffffff;
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .toggle-min {
